--- a/menu-food.html
+++ b/menu-food.html
@@ -415,7 +415,7 @@
                 </a>
                 <h5>
                   <strong>
-                    <a href="" class="dark-grey-text">Asam Laksa</a>
+                    <a href="img/menu/food/food6.jpg" class="dark-grey-text">Asam Laksa</a>
                   </strong>
                 </h5>
                 <br>
