--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
 <!-- Small Gallery -->
 
 <!--Carousel Wrapper-->
-<div id="btm-gallery" class="carousel slide carousel-multi-item carousel-multi-item-2 d-flex flex-row flex-wrap justify-content-center" data-ride="carousel" data-interval="2800">
+<div id="btm-gallery" class="carousel slide carousel-multi-item carousel-multi-item-2 d-flex flex-row flex-wrap justify-content-center" data-ride="carousel" data-interval="2800" data-pause="hover">
 
     
 
