--- a/menu-3.html
+++ b/menu-3.html
@@ -324,7 +324,7 @@
                             <div class="view overlay">
                                 <img src="img/menu/desert/dessert3.png" class="card-img-top" alt="">
                                 <a>
-                                    <div class="mask rgba-white-slight"></div>
+                                    <div class="mask rgba-black-light"></div>
                                 </a>
                             </div>
                             <!--Card image-->
@@ -365,7 +365,7 @@
                             <div class="view overlay">
                                 <img src="img/menu/desert/dessert4.jpg" class="card-img-top" alt="">
                                 <a>
-                                    <div class="mask rgba-white-slight"></div>
+                                    <div class="mask rgba-black-light"></div>
                                 </a>
                             </div>
                             <!--Card image-->
