--- a/menu-beverage.html
+++ b/menu-beverage.html
@@ -321,10 +321,10 @@
                         <div class="card">
 
                             <!--Card image-->
-                            <div class="view overlay">
+                            <div class="view zoom">
                                 <img src="img/menu/beverages/drink1.jpg" class="card-img-top" alt="">
                                 <a>
-                                    <div class="mask rgba-white-slight"></div>
+                                    <div class="mask rgba-black-light"></div>
                                 </a>
                             </div>
                             <!--Card image-->
@@ -362,10 +362,10 @@
                         <div class="card">
 
                             <!--Card image-->
-                            <div class="view overlay">
+                            <div class="view zoom">
                                 <img src="img/menu/beverages/drink2.jpg" class="card-img-top" alt="">
                                 <a>
-                                    <div class="mask rgba-white-slight"></div>
+                                    <div class="mask rgba-black-light"></div>
                                 </a>
                             </div>
                             <!--Card image-->
@@ -402,10 +402,10 @@
                         <div class="card">
 
                             <!--Card image-->
-                            <div class="view overlay">
+                            <div class="view zoom">
                                 <img src="img/menu/beverages/drink3.jpg" class="card-img-top" alt="">
                                 <a>
-                                    <div class="mask rgba-white-slight"></div>
+                                    <div class="mask rgba-black-light"></div>
                                 </a>
                             </div>
                             <!--Card image-->
@@ -443,10 +443,10 @@
                         <div class="card">
 
                             <!--Card image-->
-                            <div class="view overlay">
+                            <div class="view zoom">
                                 <img src="img/menu/beverages/drink4.jpg" class="card-img-top" alt="">
                                 <a>
-                                    <div class="mask rgba-white-slight"></div>
+                                    <div class="mask rgba-black-light"></div>
                                 </a>
                             </div>
                             <!--Card image-->
@@ -489,10 +489,10 @@
                         <div class="card">
 
                             <!--Card image-->
-                            <div class="view overlay">
+                            <div class="view zoom">
                                 <img src="img/menu/beverages/drink5.jpg" class="card-img-top" alt="">
                                 <a>
-                                    <div class="mask rgba-white-slight"></div>
+                                    <div class="mask rgba-black-light"></div>
                                 </a>
                             </div>
                             <!--Card image-->
@@ -530,10 +530,10 @@
                         <div class="card">
 
                             <!--Card image-->
-                            <div class="view overlay">
+                            <div class="view zoom">
                                 <img src="img/menu/beverages/drink6.jpg" class="card-img-top" alt="">
                                 <a>
-                                    <div class="mask rgba-white-slight"></div>
+                                    <div class="mask rgba-black-light"></div>
                                 </a>
                             </div>
                             <!--Card image-->
