--- a/menu-dessert.html
+++ b/menu-dessert.html
@@ -320,10 +320,10 @@
                         <div class="card">
 
                             <!--Card image-->
-                            <div class="view overlay">
+                            <div class="view zoom">
                                 <img src="img/menu/desert/dessert1.jpg" class="card-img-top" alt="">
                                 <a>
-                                    <div class="mask rgba-white-slight"></div>
+                                    <div class="mask rgba-black-light"></div>
                                 </a>
                             </div>
                             <!--Card image-->
@@ -361,10 +361,10 @@
                         <div class="card">
 
                             <!--Card image-->
-                            <div class="view overlay">
+                            <div class="view zoom">
                                 <img src="img/menu/desert/dessert2.png" class="card-img-top" alt="">
                                 <a>
-                                    <div class="mask rgba-white-slight"></div>
+                                    <div class="mask rgba-black-light"></div>
                                 </a>
                             </div>
                             <!--Card image-->
@@ -401,10 +401,10 @@
                         <div class="card">
 
                             <!--Card image-->
-                            <div class="view overlay">
+                            <div class="view zoom">
                                 <img src="img/menu/desert/dessert3.png" class="card-img-top" alt="">
                                 <a>
-                                    <div class="mask rgba-white-slight"></div>
+                                    <div class="mask rgba-black-light"></div>
                                 </a>
                             </div>
                             <!--Card image-->
@@ -442,10 +442,10 @@
                         <div class="card">
 
                             <!--Card image-->
-                            <div class="view overlay">
+                            <div class="view zoom">
                                 <img src="img/menu/desert/dessert4.jpg" class="card-img-top" alt="">
                                 <a>
-                                    <div class="mask rgba-white-slight"></div>
+                                    <div class="mask rgba-black-light"></div>
                                 </a>
                             </div>
                             <!--Card image-->
