--- a/test.html
+++ b/test.html
@@ -459,7 +459,7 @@
 </div>
 
 <div class="media">
-  <img class="d-flex align-self-start mr-3" src="https://mdbootstrap.com/img/Photos/Others/placeholder7.jpg" alt="Generic placeholder image">
+  <img class="d-flex align-self-end mr-3" src="https://mdbootstrap.com/img/Photos/Others/placeholder7.jpg" alt="Generic placeholder image">
   <div class="media-body">
       <h5 class="mt-0 font-weight-bold">Center-aligned media</h5>
       <p> 1Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra
