--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>MDIS CAFE</title>
+  <title>MDIS CAFETERIA </title>
   <!-- Font Awesome -->
   <link href ="css/fontawesome-all.css" rel ="stylesheet">
   <!-- Bootstrap core CSS -->
@@ -17,6 +17,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Titan+One" rel="stylesheet">
   <link href="css/style.min.css" rel="stylesheet">
+ 
   <style type="text/css">
     html,
     body,
@@ -77,7 +78,7 @@
             <a class="nav-link waves-effect" href="menu.html" target="_self"> Our Menu</a>
           </li>
           <li class="nav-item ">
-            <a class="nav-link waves-effect" href="#">Promotions
+            <a class="nav-link waves-effect" href="promo.html">Promotions
              
             </a>
           </li>
@@ -591,34 +592,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <!-- Order Button -->
 <div class="btn-container">
 <div class="btn-group" role="group" aria-label="Order">
@@ -629,20 +602,6 @@
     </div>
 
   </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -685,6 +644,10 @@
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="js/mdb.min.js"></script>
+
+
+
+
   <!-- Initializations -->
   <script type="text/javascript">
     // Animations initialization
