--- a/menu-2.html
+++ b/menu-2.html
@@ -318,10 +318,10 @@
                         <div class="card">
 
                             <!--Card image-->
-                            <div class="view overlay">
+                            <div class="view zoom">
                                 <img src="img/menu/beverages/drink1.jpg" class="card-img-top" alt="">
                                 <a>
-                                    <div class="mask rgba-white-slight"></div>
+                                    <div class="mask rgba-black-light"></div>
                                 </a>
                             </div>
                             <!--Card image-->
@@ -359,10 +359,10 @@
                         <div class="card">
 
                             <!--Card image-->
-                            <div class="view overlay">
+                            <div class="view zoom">
                                 <img src="img/menu/beverages/drink2.jpg" class="card-img-top" alt="">
                                 <a>
-                                    <div class="mask rgba-white-slight"></div>
+                                    <div class="mask rgba-black-light"></div>
                                 </a>
                             </div>
                             <!--Card image-->
@@ -399,10 +399,10 @@
                         <div class="card">
 
                             <!--Card image-->
-                            <div class="view overlay">
+                            <div class="view zoom">
                                 <img src="img/menu/beverages/drink3.jpg" class="card-img-top" alt="">
                                 <a>
-                                    <div class="mask rgba-white-slight"></div>
+                                    <div class="mask rgba-black-light"></div>
                                 </a>
                             </div>
                             <!--Card image-->
@@ -440,10 +440,10 @@
                         <div class="card">
 
                             <!--Card image-->
-                            <div class="view overlay">
+                            <div class="view zoom">
                                 <img src="img/menu/beverages/drink4.jpg" class="card-img-top" alt="">
                                 <a>
-                                    <div class="mask rgba-white-slight"></div>
+                                    <div class="mask rgba-black-light"></div>
                                 </a>
                             </div>
                             <!--Card image-->
@@ -486,10 +486,10 @@
                         <div class="card">
 
                             <!--Card image-->
-                            <div class="view overlay">
+                            <div class="view zoom">
                                 <img src="img/menu/beverages/drink5.jpg" class="card-img-top" alt="">
                                 <a>
-                                    <div class="mask rgba-white-slight"></div>
+                                    <div class="mask rgba-black-light"></div>
                                 </a>
                             </div>
                             <!--Card image-->
@@ -527,10 +527,10 @@
                         <div class="card">
 
                             <!--Card image-->
-                            <div class="view overlay">
+                            <div class="view zoom">
                                 <img src="img/menu/beverages/drink6.jpg" class="card-img-top" alt="">
                                 <a>
-                                    <div class="mask rgba-white-slight"></div>
+                                    <div class="mask rgba-black-light"></div>
                                 </a>
                             </div>
                             <!--Card image-->
@@ -568,10 +568,10 @@
                         <div class="card">
 
                             <!--Card image-->
-                            <div class="view overlay">
+                            <div class="view zoom">
                                 <img src="img/menu/desert/dessert1.jpg" class="card-img-top" alt="">
                                 <a>
-                                    <div class="mask rgba-white-slight"></div>
+                                    <div class="mask rgba-black-light"></div>
                                 </a>
                             </div>
                             <!--Card image-->
@@ -609,10 +609,10 @@
                         <div class="card">
 
                             <!--Card image-->
-                            <div class="view overlay">
+                            <div class="view zoom">
                                 <img src="img/menu/desert/dessert2.png" class="card-img-top" alt="">
                                 <a>
-                                    <div class="mask rgba-white-slight"></div>
+                                    <div class="mask rgba-black-light"></div>
                                 </a>
                             </div>
                             <!--Card image-->
