--- a/menu-food.html
+++ b/menu-food.html
@@ -321,10 +321,10 @@
             <div class="card">
 
               <!--Card image-->
-              <div class="view overlay">
+              <div class="view zoom overlay">
                 <img src="img/menu/food/food1.jpg" class="card-img-top" alt="">
                 <a>
-                  <div class="mask rgba-white-slight"></div>
+                  <div class="mask rgba-black-light"></div>
                 </a>
               </div>
               <!--Card image-->
@@ -362,10 +362,10 @@
             <div class="card">
 
               <!--Card image-->
-              <div class="view overlay">
+              <div class="view zoom">
                 <img src="img/menu/food/food2.jpg" class="card-img-top" alt="">
                 <a>
-                  <div class="mask rgba-white-slight"></div>
+                  <div class="mask rgba-black-light"></div>
                 </a>
               </div>
               <!--Card image-->
@@ -402,10 +402,10 @@
             <div class="card">
 
               <!--Card image-->
-              <div class="view overlay">
+              <div class="view zoom">
                 <img src="img/menu/food/food3.png" class="card-img-top" alt="">
                 <a>
-                  <div class="mask rgba-white-slight"></div>
+                  <div class="mask rgba-black-light"></div>
                 </a>
               </div>
               <!--Card image-->
@@ -443,10 +443,10 @@
             <div class="card">
 
               <!--Card image-->
-              <div class="view overlay">
+              <div class="view zoom">
                 <img src="img/menu/food/food4.jpg" class="card-img-top" alt="">
                 <a>
-                  <div class="mask rgba-white-slight"></div>
+                  <div class="mask rgba-black-light"></div>
                 </a>
               </div>
               <!--Card image-->
@@ -489,10 +489,10 @@
             <div class="card">
 
               <!--Card image-->
-              <div class="view overlay">
+              <div class="view zoom">
                 <img src="img/menu/food/food5.jpg" class="card-img-top" alt="">
                 <a>
-                  <div class="mask rgba-white-slight"></div>
+                  <div class="mask rgba-black-light"></div>
                 </a>
               </div>
               <!--Card image-->
@@ -530,10 +530,10 @@
             <div class="card">
 
               <!--Card image-->
-              <div class="view overlay">
+              <div class="view zoom">
                 <img src="img/menu/food/food6.jpg" class="card-img-top" alt="">
                 <a>
-                  <div class="mask rgba-white-slight"></div>
+                  <div class="mask rgba-black-light"></div>
                 </a>
               </div>
               <!--Card image-->
@@ -571,10 +571,10 @@
             <div class="card">
 
               <!--Card image-->
-              <div class="view overlay">
+              <div class="view zoom">
                 <img src="img/menu/food/food7.png" class="card-img-top" alt="">
                 <a>
-                  <div class="mask rgba-white-slight"></div>
+                  <div class="mask rgba-black-light"></div>
                 </a>
               </div>
               <!--Card image-->
@@ -614,10 +614,10 @@
             <div class="card">
 
               <!--Card image-->
-              <div class="view overlay">
+              <div class="view zoom">
                 <img src="img/menu/food/food8.jpg" class="card-img-top" alt="">
                 <a>
-                  <div class="mask rgba-white-slight"></div>
+                  <div class="mask rgba-black-light"></div>
                 </a>
               </div>
               <!--Card image-->
