--- a/menu.html
+++ b/menu.html
@@ -320,10 +320,10 @@
               <div class="card">
   
                 <!--Card image-->
-                <div class="view overlay">
+                <div class="view zoom">
                   <img src="img/menu/food/food1.jpg" class="card-img-top" alt="">
                   <a>
-                    <div class="mask rgba-white-slight"></div>
+                    <div class="mask rgba-black-light"></div>
                   </a>
                 </div>
                 <!--Card image-->
@@ -361,10 +361,10 @@
               <div class="card">
   
                 <!--Card image-->
-                <div class="view overlay">
+                <div class="view zoom">
                   <img src="img/menu/food/food2.jpg" class="card-img-top" alt="">
                   <a>
-                    <div class="mask rgba-white-slight"></div>
+                    <div class="mask rgba-black-light"></div>
                   </a>
                 </div>
                 <!--Card image-->
@@ -401,10 +401,10 @@
               <div class="card">
   
                 <!--Card image-->
-                <div class="view overlay">
+                <div class="view zoom">
                   <img src="img/menu/food/food3.png" class="card-img-top" alt="">
                   <a>
-                    <div class="mask rgba-white-slight"></div>
+                    <div class="mask rgba-black-light"></div>
                   </a>
                 </div>
                 <!--Card image-->
@@ -442,10 +442,10 @@
               <div class="card">
   
                 <!--Card image-->
-                <div class="view overlay">
+                <div class="view zoom">
                   <img src="img/menu/food/food4.jpg" class="card-img-top" alt="">
                   <a>
-                    <div class="mask rgba-white-slight"></div>
+                    <div class="mask rgba-black-light"></div>
                   </a>
                 </div>
                 <!--Card image-->
@@ -488,10 +488,10 @@
               <div class="card">
   
                 <!--Card image-->
-                <div class="view overlay">
+                <div class="view zoom">
                   <img src="img/menu/food/food5.jpg" class="card-img-top" alt="">
                   <a>
-                    <div class="mask rgba-white-slight"></div>
+                    <div class="mask rgba-black-light"></div>
                   </a>
                 </div>
                 <!--Card image-->
@@ -530,10 +530,10 @@
               <div class="card">
   
                 <!--Card image-->
-                <div class="view overlay">
+                <div class="view zoom">
                   <img src="img/menu/food/food6.jpg" class="card-img-top" alt="">
                   <a>
-                    <div class="mask rgba-white-slight"></div>
+                    <div class="mask rgba-black-light"></div>
                   </a>
                 </div>
                 <!--Card image-->
@@ -571,10 +571,10 @@
               <div class="card">
   
                 <!--Card image-->
-                <div class="view overlay">
+                <div class="view zoom">
                   <img src="img/menu/food/food7.png" class="card-img-top" alt="">
                   <a>
-                    <div class="mask rgba-white-slight"></div>
+                    <div class="mask rgba-black-light"></div>
                   </a>
                 </div>
                 <!--Card image-->
@@ -614,10 +614,10 @@
               <div class="card">
   
                 <!--Card image-->
-                <div class="view overlay">
+                <div class="view zoom">
                   <img src="img/menu/food/food8.jpg" class="card-img-top" alt="">
                   <a>
-                    <div class="mask rgba-white-slight"></div>
+                    <div class="mask rgba-black-light"></div>
                   </a>
                 </div>
                 <!--Card image-->
