--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <br><br>
     
                         <p>I'm a diploma student who is currently looking for a 3 months web developement internship opportunity from August 2018 - November 2018.
-                            I believe this opportunity is essential for my personal development which allows me to refine my technical skills and learn more knowledge about web development. I'm extremely passsionate about web development. I enjoy creating beautifully designed, intuitive and functional websites.  </p>
+                            I believe this opportunity is essential for my personal development which allows me to refine my technical skills and learn more knowledge about web development. I'm extremely passsionate about web development.  </p>
 
                     </div>
 
