--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <div class="container col-md-7 introduce pt-4">
                         <br><br>
     
-                        <p>I'm a diploma student who is currently looking for a 3 months web developement internship opportunity from August 2018 - November 2018.
+                        <p>I'm a fresh graduate diploma student who is currently looking for a job opportunity which is related with web design / web development.
                             I believe this opportunity is essential for my personal development which allows me to refine my technical skills and learn more knowledge about web development. I'm extremely passsionate about web development.  </p>
 
                     </div>
